fixed invisible scrollbar and padding issues

--- a/app/assets/stylesheets/landing-nav.scss
+++ b/app/assets/stylesheets/landing-nav.scss
@@ -8,7 +8,7 @@
   padding: 20px 35px 0 35px;
 
   @media screen and (max-width: 400px) {
-    padding: 10px 35px 0 35px;
+    padding: 10px 25px 0 25px;
   }
 
   @media screen and (max-width: 320px) {
